@@ -277,6 +277,7 @@ int EvseRapiProcessor::processCmd()
 	  case 'E': // command echo
 	    echo = ((u1.u8 == '0') ? 0 : 1);	      
 	    break;
+#ifdef ADVPWR
 	  case 'F': // GFI self test
 	    g_EvseController.EnableGfiSelfTest(u1.u8);
 	    break;
@@ -286,6 +287,7 @@ int EvseRapiProcessor::processCmd()
 	  case 'R': // stuck relay check
 	    g_EvseController.EnableStuckRelayChk(u1.u8);
 	    break;
+#endif // ADVPWR
 #ifdef TEMPERATURE_MONITORING
 	  case 'T': // temperature monitoring
 	    g_EvseController.EnableTempChk(u1.u8);
@@ -597,8 +599,13 @@ int EvseRapiProcessor::processCmd()
 #else
       u1.u = 0;
 #endif // GFI
+#ifdef ADVPWR
       u2.u = g_EvseController.GetNoGndTripCnt();
       u3.u = g_EvseController.GetStuckRelayTripCnt();
+#else
+	  u2.u = 0;
+	  u3.u = 0;
+#endif // ADVPWR
       sprintf(buffer,"%x %x %x",u1.u,u2.u,u3.u);
       bufCnt = 1; // flag response text output
       rc = 0;
