@@ -1,5 +1,9 @@
 Change Log
 
+20180417 SCL
+- fix compile errors when no GFI and ADVPWR. Must also undef UL_COMPLIANT,
+	GFI_SELFTEST, AUTOSVCLEVEL
+	
 20180406 SCL
 - fix compile error when AMMETER not defined
 	
